--- a/pages/Gallery/index.html
+++ b/pages/Gallery/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../../assets/bl-icons/bl-icons.css">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="stylesheet" href="../../assets/css/style.css">
@@ -127,22 +129,22 @@ overscroll-behavior-y: contain; /* stops pull-to-refresh */
   <ul>
     <li>
       <a href="../../index.html" class="wii">
-        <span><img class="nav-icon" src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Google_material_icons_arrow_back_24px.svg">Back</span>
+         <span class="bl-icons-home"></span><label>‎Home</label>
       </a>
     </li>
      <li>
       <a onclick="selectTag(event, '')" class="wii">
-        <span>All</span>
+        <label>All</label>
       </a>
     </li>
     <li>
       <a onclick="selectTag(event, 'sketch')" class="wii">
-        <span>Sketch</span>
+        <label>Sketch</label>
       </a>
     </li>
     <li>
       <a onclick="selectTag(event, 'settei')" class="wii">
-        <span>Settei</span>
+        <label>Settei</label>
       </a>
     </li>
   </ul>
