--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../assets/bl-icons/bl-icons.css">
+  
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/gallery.css">
   <script src="../assets/js/gallery.js"></script>
@@ -15,7 +17,7 @@
   <ul>
     <li>
       <a href="../index.html" class="wii">
-        <span><img class="nav-icon" src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Google_material_icons_arrow_back_24px.svg">Back</span>
+         <span class="bl-icons-home"></span><label>‎Home</label>
       </a>
     </li>  
   </ul>
@@ -31,7 +33,7 @@
 	}
 	.table-img{
 	width:200px ;
-	background-image:url('../assets/drawings/icon.png');
+	background-image:url('../assets/icon.png');
 	background-size:cover;
 	background-repeat: no-repeat;
 	background-position: center;
