--- a/pages/links.html
+++ b/pages/links.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../assets/bl-icons/bl-icons.css">
+  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/gallery.css">
@@ -14,7 +16,7 @@
   <ul>
     <li>
       <a href="../index.html" class="wii">
-        <span><img class="nav-icon" src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Google_material_icons_arrow_back_24px.svg">Back</span>
+        <span class="bl-icons-home"></span><label>‎Home</label>
       </a>
     </li> 
   </ul>
@@ -49,20 +51,6 @@
     <h1>INSTAGRAM</h1>
   </a>
 
-<!--  <a class="social-btn" href="https://www.tumblr.com/sadewoo" target="_blank">-->
-<!--    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384067.png" alt="Tumblr">-->
-<!--    <h1>TUMBLR</h1>-->
-<!--  </a>-->
-
-<!--  <a class="social-btn linkedin" href="https://www.linkedin.com/in/sadewa-dika-sadewoo-b1722a11b/" target="_blank">-->
-<!--    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384072.png" alt="LinkedIn">-->
-<!--    <h1>LINKEDIN</h1>-->
-<!--  </a>-->
-
-<!--  <a class="social-btn gumroad" href="https://sadewoo.gumroad.com/" target="_blank">-->
-<!--    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png" alt="Gumroad">-->
-<!--    <h1>GUMROAD</h1>-->
-<!--  </a>-->
 </div>
 
 
