--- a/pages/tools.html
+++ b/pages/tools.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../assets/bl-icons/bl-icons.css">
+  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/gallery.css">
   <script src="../assets/js/gallery.js"></script>
-  <link rel="stylesheet" href="../assets/bl-icons/bl-icons.css">
+  
 </head>
 <body>
 
@@ -15,7 +17,7 @@
   <ul>
     <li>
       <a href="../index.html" class="wii">
-        <span><img class="nav-icon" src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Google_material_icons_arrow_back_24px.svg">Back</span>
+         <span class="bl-icons-home"></span><label>‎Home</label>
       </a>
     </li> 
   </ul>
