--- a/pages/XDTS-Editor/index.html
+++ b/pages/XDTS-Editor/index.html
@@ -8,15 +8,12 @@
 </head>
 <body >
 
-   
+<style type="text/css" media="print">
+.dontprint{ display: none; }
+</style>
 
-  
-  
-<div class="box">
-	
-</div>
 
-<div clas="box">
+<div class="dontprint">
 
 <div class="panel">
 	<label><b>File :</b></label>
@@ -52,8 +49,6 @@
 </div>
 
 <div class="panel">
-		<b><label id="durationLabel">Duration: (0+0) | Frames: 0</label></b>
-		<br>
 		<label>Adjust Duration by: <input type="number" id="adjustDuration" value="1" min="1"></label>
 		<button id="increaseDurationBtn">Increase Duration</button>
 		<button id="decreaseDurationBtn">Decrease Duration</button>
@@ -76,6 +71,56 @@
 </div>
 
 <input type="file" id="fileInput" accept=".xdts,.json,.txt" style="display:none">
+
+<style>
+.container {
+  display: flex;
+   flex: 1 1 0px; 
+  background-color: none;
+}
+
+.container div {
+	width:100%;
+  background-color: #f1f1f1;
+  font-size: 14px;
+}
+
+.container input {
+	background-color: white; border:none;appearance: textfield;
+	width:100%;
+	font-size:20px;
+	border-bottom:1px lightgray solid;
+	border-left:1px lightgray solid;
+}
+.label {text-align: center;}
+.container input{text-align:center;}
+#durationLabel{color:blue;font-size:18px;}
+
+</style>
+
+<div class="container">
+  <div>
+	  <div class="label">TITLE</div>
+	  <div><input id="titleInput" type="text"></div>
+  </div>
+  <div>
+ 		<div class="label">SCENE</div>
+ 		<div><input id="sceneInput" type="number"></div>
+</div>
+  <div>
+		<div class="label">CUT</div>
+		<div><input id="cutInput" type="number"></div>
+	</div>
+	<div>
+		<div class="label">NAME</div>
+		<div><input id="nameInput" type="text"></div>
+	</div>
+  <div>
+  	<div class="label">TIME</div>
+  	<div><center><label id="durationLabel">0+0 | 00</label></center></div>
+	</div>
+</div>
+
 
   <div id="tableContainer"></div>
 
