--- a/pages/XDTS-Editor/index.html
+++ b/pages/XDTS-Editor/index.html
@@ -85,7 +85,7 @@
 
 .container div{
 	width:100%;
-  background-color: #f1f1f1;
+  
   font-size: 14px;
 }
 
@@ -93,35 +93,44 @@
 	background-color: white; border:none;appearance: textfield;
 	width:100%;
 	font-size:20px;
-	border-bottom:1px lightgray solid;
-	border-left:1px lightgray solid;
+	
 }
-.label {text-align: center;}
+.label {
+	background-color: #f1f1f1;
+	text-align: center;
+	border-bottom:1px black solid;
+	border-left:1px black solid;
+	border-top:1px black solid
+	}
+.data{border-bottom:1px black solid;
+	border-left:1px black solid;}
 .container input{text-align:center;}
-#durationLabel{font-size:18px;}
-
+#durationLabel{font-size:17.5px;font-weight:bold;}
+.last{border-bottom:1px black solid;
+	border-left:1px black solid;
+	border-right:1px black solid}
 </style>
 
 <div class="container">
   <div>
 	  <div class="label">TITLE</div>
-	  <div><input id="titleInput" type="text"></div>
+	  <div class="data"><input id="titleInput" type="text"></div>
   </div>
   <div>
  		<div class="label">SCENE</div>
- 		<div><input id="sceneInput" type="number"></div>
+ 		<div class="data"><input id="sceneInput" type="number"></div>
 </div>
   <div>
 		<div class="label">CUT</div>
-		<div><input id="cutInput" type="number"></div>
+		<div class="data"><input id="cutInput" type="number"></div>
 	</div>
 	<div>
 		<div class="label">NAME</div>
-		<div><input id="nameInput" type="text"></div>
+		<div class="data"><input id="nameInput" type="text"></div>
 	</div>
   <div>
-  	<div class="label">TIME</div>
-  	<div ><center><label id="durationLabel">0+0 | 00</label></center></div>
+  	<div class="label last">TIME</div>
+  	<div class="last" ><center><label id="durationLabel">0+0 | 00</label></center></div>
 	</div>
 </div>
 
