--- a/pages/ImageSequenceDeduplicator/index.html
+++ b/pages/ImageSequenceDeduplicator/index.html
@@ -1,164 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<head>
-  <meta charset="UTF-8">
-  <title>Image Sequence Deduplicator</title>
-  <style>
-  html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  overflow-x: hidden; /* prevent horizontal scroll */
-  box-sizing: border-box;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
-    #dropZone {
-      width: 100%;
-      padding: 40px;
-      border: 2px dashed #888;
-      text-align: center;
-      color: #555;
-      margin-bottom: 20px;
-      cursor: pointer;
-    }
-    #progressBar {
-      width: 100%;
-      height: 20px;
-      background: #eee;
-      border: 1px solid #ccc;
-      margin-top: 10px;
-    }
-    #progressBar div {
-      height: 100%;
-      width: 0%;
-      background: #76c7c0;
-      transition: width 0.2s;
-    }
-    #dropZone, #progressBar {
-  max-width: 100%;   /* prevent overflow */
-  margin: 0 auto;    /* center horizontally */
-}
-
-  </style>
-  <!-- JSZip + FileSaver -->
-  <script src="../../assets/js/jszip.min.js"></script>
-  <script src="../../assets/js/FileSaver.min.js"></script>
-</head>
-<body>
-  <div id="dropZone">Drop your images here or click to browse</div>
-  <input type="file" id="fileInput" multiple accept="image/*" style="display:none;">
-  <div id="progressBar"><div></div></div>
-  <center><br>
-  Upload your image Sequence<br>(eg: A_0001.png, A_0002.png, etc..)<br>
-  Wait until progress is complete<br>
-  it'll scan your image sequence and find images with the same pixels and remove the duplicates, leaving only the keyframes.<br>
-  File will be saved as "unique_images.zip" in your download folder<br>
-  The upload/deduplication process and .zip download are runs locally.<br>
-<br>
-</center>
-  <script>
-    let uniqueFiles = [];
-
-    async function getImageHash(file) {
-      return new Promise((resolve, reject) => {
-        const reader = new FileReader();
-        reader.onload = e => {
-          const img = new Image();
-          img.onload = async () => {
-            const canvas = document.createElement("canvas");
-            const size = 64;
-            canvas.width = size;
-            canvas.height = size;
-            const ctx = canvas.getContext("2d");
-            ctx.drawImage(img, 0, 0, size, size);
-
-            const imageData = ctx.getImageData(0, 0, size, size).data;
-            const digest = await crypto.subtle.digest("SHA-256", imageData.buffer);
-            const hash = Array.from(new Uint8Array(digest))
-              .map(b => b.toString(16).padStart(2, "0"))
-              .join("");
-            resolve(hash);
-          };
-          img.onerror = reject;
-          img.src = e.target.result;
-        };
-        reader.onerror = reject;
-        reader.readAsDataURL(file);
-      });
-    }
-
-    function extractFrameNumber(filename) {
-      const base = filename.split(".")[0];
-      const match = base.match(/(\d+)/);
-      return match ? parseInt(match[1], 10) : null;
-    }
-
-    async function processFiles(files) {
-      const seen = new Set();
-      uniqueFiles = [];
-      const progress = document.querySelector("#progressBar div");
-
-      for (let i = 0; i < files.length; i++) {
-        try {
-          const hash = await getImageHash(files[i]);
-          if (!seen.has(hash)) {
-            seen.add(hash);
-            uniqueFiles.push(files[i]);
-          } else {
-            console.log(`Duplicate removed: ${files[i].name}`);
-          }
-        } catch (err) {
-          console.error("Error processing file:", files[i].name, err);
-        }
-        progress.style.width = ((i + 1) / files.length * 100) + "%";
-      }
-
-      if (uniqueFiles.length > 0) {
-        const zip = new JSZip();
-
-        for (const file of uniqueFiles) {
-          const data = await file.arrayBuffer();
-          const ext = file.name.split(".").pop().toLowerCase();
-          const frameNum = extractFrameNumber(file.name);
-          const newName = frameNum !== null ? `${frameNum}.${ext}` : `${uniqueFiles.indexOf(file)+1}.${ext}`;
-          // Put directly at root of ZIP
-          zip.file(newName, data);
-        }
-
-        const content = await zip.generateAsync({ type: "blob" });
-        saveAs(content, "unique_images.zip");
-        progress.style.width = "100%";
-      }
-    }
-
-    const dropZone = document.getElementById("dropZone");
-    const fileInput = document.getElementById("fileInput");
-
-    dropZone.addEventListener("click", () => fileInput.click());
-    dropZone.addEventListener("dragover", e => {
-      e.preventDefault();
-      dropZone.style.background = "#f0f0f0";
-    });
-    dropZone.addEventListener("dragleave", () => {
-      dropZone.style.background = "";
-    });
-    dropZone.addEventListener("drop", e => {
-      e.preventDefault();
-      dropZone.style.background = "";
-      const files = Array.from(e.dataTransfer.files).filter(f => f.type.startsWith("image/"));
-      processFiles(files);
-    });
-
-    fileInput.addEventListener("change", e => {
-      const files = Array.from(e.target.files);
-      processFiles(files);
-    });
-  </script>
-</body>
-</html>
-
+<meta http-equiv="refresh" content="0; url=https://imagesequencededuplicator.netlify.app/">
