--- a/pages/XDTS-Editor/index.html
+++ b/pages/XDTS-Editor/index.html
@@ -1,144 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" id="dropZone">
-<head>
-  <meta charset="UTF-8">
-  <title>XDTS Editor</title>
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
-<body >
-
-<style type="text/css" media="print">
-.dontprint{ display: none; }
-</style>
-
-
-<div class=" box dontprint">
-
-<div class="panel">
-	<label><b>File :</b></label>
-	<br>
-	<button id="loadXDTSbtn">Load</button>
-	<button id="newTimesheetBtn">New</button>
-	<button id="exportBtn" style="display:none">Save</button>
-	<br>
-	<label>New Duration (Frames) : </label><label><input type="number" id="newDuration" min="1" value="24"></label>
-	<br>
-	<label><i>*You can drag and drop .xdts file into the page to load it</i></label>
-	</div>
-	
-
-  <div class="panel">
-	  <label><b>Symbols : </b></label><br>
-	  <label>Empty Cell : <input type="text" id="symNull" value="x"></label><br>
-	  <label>Inbetween : <input type="text" id="symTick1" value="○"></label><br>
-	  <label>Reverse Sheet : <input type="text" id="symTick2" value="●"></label><br>
-	  <label>Hyphen : <input type="text" id="symHyphen" value="｜"></label> 
-	
-
-<!--<label for="fontSizeInput">Font Size:</label>-->
-<!--<input type="number" id="fontSizeInput" min="1" max="999" value="14">-->
-
-
-</div>
-<div class="panel">
-<label><b>Table :</b></label><br>
-<label for="cellWidthInput">Cell Width:</label>
-<input type="number" id="cellWidthInput" min="0" max="999" value="30"><br>
-
-<label for="cellHeightInput">Cell Height:</label>
-<input type="number" id="cellHeightInput" min="0" max="999" value="30"><br>
-
-<label>Adjust Duration by: <input type="number" id="adjustDuration" value="1" min="1"></label>
-		<br>
-		<button id="increaseDurationBtn">Increase Duration</button>
-		<button id="decreaseDurationBtn">Decrease Duration</button>
-		
-</div>
-	
-	<div class="panel" >
-	<label><b>Track :</b></label>
-	<br>
-		<button id="addTrackBtn">Add Track</button>
-		<button id="removeTrackBtn">Remove Last Track</button>
-		<button id="autoRenameBtn">Auto-Rename</button>
-		<br>
-		<label>Track to reorder: <input type="text" id="reorderInput" value="A"></label>
-		
-		<button id="reorderLeftBtn">Reorder to Left</button>
-		<button id="reorderRightBtn">Reorder to Right</button>
-		
-	</div>
-	
-	
-		
-</div>
-
-<input type="file" id="fileInput" accept=".xdts,.json,.txt" style="display:none">
-
-<style>
-.container {
-  display: flex;
-   flex: 1 1 0px; 
-  background-color: none;
-}
-
-.container div{
-	width:100%;
-  
-  font-size: 14px;
-}
-
-.container input {
-	background-color: white; border:none;appearance: textfield;
-	width:100%;
-	font-size:20px;
-	
-}
-.label {
-	background-color: #f1f1f1;
-	text-align: center;
-	border-bottom:1px black solid;
-	border-left:1px black solid;
-	border-top:1px black solid
-	}
-.data{border-bottom:1px black solid;
-	border-left:1px black solid;}
-.container input{text-align:center;}
-#durationLabel{font-size:17.5px;font-weight:bold;}
-.last{border-bottom:1px black solid;
-	border-left:1px black solid;
-	border-right:1px black solid}
-</style>
-
-<div class="container">
-  <div>
-	  <div class="label">TITLE</div>
-	  <div class="data"><input id="titleInput" type="text"></div>
-  </div>
-  <div>
- 		<div class="label">SCENE</div>
- 		<div class="data"><input id="sceneInput" type="number"></div>
-</div>
-  <div>
-		<div class="label">CUT</div>
-		<div class="data"><input id="cutInput" type="number"></div>
-	</div>
-	<div>
-		<div class="label">NAME</div>
-		<div class="data"><input id="nameInput" type="text"></div>
-	</div>
-  <div>
-  	<div class="label last">TIME</div>
-  	<div class="last" ><center><label id="durationLabel">0+0 | 00</label></center></div>
-	</div>
-</div>
-
-
-  <div id="tableContainer"></div>
-
-  <script src="script.js"></script>
-  <script src="script2.js"></script>
-</body>
-</html>
-
+<meta http-equiv="refresh" content="0; url=https://xdtseditor.netlify.app/">
