--- a/pages/tools.html
+++ b/pages/tools.html
@@ -43,34 +43,34 @@
     <h3>Krita Plugin</h3>
   </a> 
   
-  <a class="social-btn" href="XDTS-Editor/index.html">
+  <a class="social-btn" href="https://xdtseditor.netlify.app/">
   <span class="bl-icons-url"></span>‎
     <h1>XDTS Editor</h1>
     <h3>TimeSheet Editor</h3>
   </a>
   
-  <a class="social-btn" href="WebRef/index.html">
+  <a class="social-btn" href="https://webref.netlify.app/">
   <span class="bl-icons-url"></span>‎
     <h1>WebRef</h1>
     <h3>Reference Image Board</h3>
   </a>
   
-  <a class="social-btn" href="VideoFBF/index.html">
+  <a class="social-btn" href="https://videofbf.netlify.app/">
   <span class="bl-icons-url"></span>‎
     <h1>VideoFBF</h1><h3>Frame by Frame Video Player</h3>
   </a>
   
-  <a class="social-btn" href="ImageSequenceDeduplicator/index.html">
+  <a class="social-btn" href="https://imagesequencededuplicator.netlify.app/">
   <span class="bl-icons-url"></span>‎
     <h1>Image Sequence Deduplicator</h1>
   </a>
   
-  <a class="social-btn" href="Kertas/index.html">
+  <a class="social-btn" href="https://kertasanimasi.netlify.app/">
   <span class="bl-icons-url"></span>‎
     <h1>Kertas</h1><h3>Sketching App</h3>
   </a>
   
-  <a class="social-btn" href="Animasikan/index.html">
+  <a class="social-btn" href="https://animasikan.netlify.app/">
   <span class="bl-icons-url"></span>‎
     <h1>Animasikan</h1><h3>Stopmotion App</h3>
   </a>
