--- a/pages/tools.html
+++ b/pages/tools.html
@@ -29,7 +29,7 @@
   <a class="social-btn" href="https://sadewoo.gumroad.com/l/SakugaGP">
     <span class="bl-icons-blender"></span>‎
     <h1>SakugaGP</h1>
-    <h3>Grease Pencil Addon</h3>
+    <h3>Grease Pencil Addon (Blender v5.0)</h3>
   </a>
   
   <a class="social-btn" href="https://github.com/spikysaurus/Blender-Compositing-Presets">
@@ -46,33 +46,33 @@
   <a class="social-btn" href="https://xdtseditor.netlify.app/">
   <span class="bl-icons-url"></span>‎
     <h1>XDTS Editor</h1>
-    <h3>TimeSheet Editor</h3>
+    <h3>TimeSheet Editor (stable) </h3>
   </a>
   
   <a class="social-btn" href="https://webref.netlify.app/">
   <span class="bl-icons-url"></span>‎
     <h1>WebRef</h1>
-    <h3>Reference Image Board</h3>
+    <h3>Reference Image Board (stable) </h3>
   </a>
   
   <a class="social-btn" href="https://videofbf.netlify.app/">
   <span class="bl-icons-url"></span>‎
-    <h1>VideoFBF</h1><h3>Frame by Frame Video Player</h3>
+    <h1>VideoFBF</h1><h3>Frame by Frame Video Player (stable)</h3>
   </a>
   
   <a class="social-btn" href="https://imagesequencededuplicator.netlify.app/">
   <span class="bl-icons-url"></span>‎
-    <h1>Image Sequence Deduplicator</h1>
+    <h1>Image Sequence Deduplicator </h1><h3>(stable)</h3>
   </a>
   
   <a class="social-btn" href="https://kertasanimasi.netlify.app/">
-  <span class="bl-icons-url"></span>‎
-    <h1>Kertas</h1><h3>Sketching App</h3>
+  <span class="bl-icons-error"></span>‎
+    <h1>Kertas</h1><h3>Sketching App (experimental)</h3>
   </a>
   
   <a class="social-btn" href="https://animasikan.netlify.app/">
-  <span class="bl-icons-url"></span>‎
-    <h1>Animasikan</h1><h3>Stopmotion App</h3>
+  <span class="bl-icons-error"></span>‎
+    <h1>Animasikan</h1><h3>Stopmotion App (experimental)</h3>
   </a>
   
   
