--- a/pages/tools.html
+++ b/pages/tools.html
@@ -34,7 +34,7 @@
   
   <a class="social-btn" href="https://github.com/spikysaurus/Blender-Compositing-Presets">
      <span class="bl-icons-blender"></span>‎
-    <h1>Anime Compositing Presets</h1>
+    <h1>Anime Compositing Presets </h1><h3>(Blender v5.0)</h3>
   </a>
   
   <a class="social-btn" href="https://github.com/spikysaurus/KRITA-SakugaKR">
