--- a/pages/tools.html
+++ b/pages/tools.html
@@ -43,34 +43,34 @@
     <h3>Krita Plugin</h3>
   </a> 
   
-  <a class="social-btn" href="https://xdtseditor.netlify.app/">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/XDTS-Editor">
   <span class="bl-icons-url"></span>‎
     <h1>XDTS Editor</h1>
     <h3>TimeSheet Editor (stable) </h3>
   </a>
   
-  <a class="social-btn" href="https://webref.netlify.app/">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/WebRef">
   <span class="bl-icons-url"></span>‎
     <h1>WebRef</h1>
     <h3>Reference Image Board (stable) </h3>
   </a>
   
-  <a class="social-btn" href="https://videofbf.netlify.app/">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/VideoFBF">
   <span class="bl-icons-url"></span>‎
     <h1>VideoFBF</h1><h3>Frame by Frame Video Player (stable)</h3>
   </a>
   
-  <a class="social-btn" href="https://imagesequencededuplicator.netlify.app/">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/ImageSequenceDeduplicator">
   <span class="bl-icons-url"></span>‎
     <h1>Image Sequence Deduplicator </h1><h3>(stable)</h3>
   </a>
   
-  <a class="social-btn" href="https://kertasanimasi.netlify.app/">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/Kertas">
   <span class="bl-icons-error"></span>‎
     <h1>Kertas</h1><h3>Sketching App (experimental)</h3>
   </a>
   
-  <a class="social-btn" href="https://animasikan.netlify.app/">
+  <a class="social-btn" href="https://spikysaurus.github.io/pages/Animasikan">
   <span class="bl-icons-error"></span>‎
     <h1>Animasikan</h1><h3>Stopmotion App (experimental)</h3>
   </a>
