--- a/pages/ZettaiAbsolute/index.html
+++ b/pages/ZettaiAbsolute/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta property="og:title" content="Zettai Absolute" />
-<meta property="og:image" content="assets/images/logo-text.png" />
+<meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSbtf1ps9jWy2pxM0VkpERXMHfcv0qiJTZLg&s" />
 <link rel="icon" href="assets/images/logo-only.png" type="image/x-icon">
 
   <meta charset="UTF-8">
