--- a/pages/ZettaiAbsolute/index.html
+++ b/pages/ZettaiAbsolute/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta property="og:title" content="Zettai Absolute" />
 <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSbtf1ps9jWy2pxM0VkpERXMHfcv0qiJTZLg&s" />
+<meta property="og:description" content="A group of web-gen animators. We're a discord community of animators all striving to improve." />
 <link rel="icon" href="assets/images/logo-only.png" type="image/x-icon">
 
   <meta charset="UTF-8">
