--- a/pages/ZettaiAbsolute/index.html
+++ b/pages/ZettaiAbsolute/index.html
@@ -83,12 +83,11 @@
 
 <center><h2>Want to work with us?</h2></center>
   <div class="box">
-	  While our comunity is called <b>Zettai Absolute</b><br>
-	  we call our studio name by <b>Zettai Beyond</b><br><br>
+	  Our community is known as <b>Zettai Absolute</b><br>
+	  While our studio goes by the name <b>Zettai Beyond</b><br><br>
 <b>Send us an email :</b><br>
 <a href="mailto:ZettaiAbsolute07@gmail.com"><button class="red-button">ZettaiAbsolute07@gmail.com</button></a>
 	  </div>
-
 <br>
 
 <center><a  href="#" ><img class="logo-only" src="assets/images/logo-only.png"></a></center>
