--- a/pages/ZettaiAbsolute/index.html
+++ b/pages/ZettaiAbsolute/index.html
@@ -35,7 +35,7 @@
          -->
       <div class="banner">
          <a href="#" ><img class="logo-text" src="assets/images/logo-text.png"></a>
-         <h1 style="margin-top:-40px;">Zettai Absolute</h1>
+         <h1 style="margin-top:-40px;font-family: 'Tagesschrift', system-ui;">Zettai Absolute</h1>
          <p style="margin-top:-10px;">A group of web-gen animators. We're a discord community of animators all striving to improve.</p>
       </div>
       <center>
