--- a/pages/ZettaiAbsolute/index.html
+++ b/pages/ZettaiAbsolute/index.html
@@ -39,7 +39,7 @@
          <p style="margin-top:-10px;">A group of web-gen animators. We're a discord community of animators all striving to improve.</p>
       </div>
       <center>
-         <h2>Check out our collabs!</h2>
+         <h2>Check out our animations!</h2>
       </center>
       <div class="box">
          <div class="carousel-container">
