languace button css update

--- a/pages/ZettaiAbsolute/index.html
+++ b/pages/ZettaiAbsolute/index.html
@@ -23,28 +23,18 @@
             <li><a target="_blank" href="https://www.youtube.com/@ZettaiAbsolute"><button class="social-icons"><i class="fab fa-youtube"></i> Youtube</button></a></li>
             <li><a target="_blank" href="https://x.com/ZettaiAbsolute"><button class="social-icons"><i class="fab fa-twitter"></i> Twitter</button></a></li>
             <li><a target="_blank" href="https://x.com/search?q=%23zettaiabsolute&src=typed_query"><button>#ZettaiAbsolute</button></a></li>
-            <li><a target="_blank" href="https://zettai-absolute.creator-spring.com/"><button><label id="label_store">STORE</label></button></a></li>
-            <li><a href="mailto:ZettaiAbsolute07@gmail.com"><button><label id="label_contactUs">CONTACT US</label></button></a></li>
+            <li><a target="_blank" href="https://zettai-absolute.creator-spring.com/"><button><label id="label_store"></label></button></a></li>
+            <li><a href="mailto:ZettaiAbsolute07@gmail.com"><button><label id="label_contactUs"></label></button></a></li>
          </ul>
          <div></div>
       </nav>
-      <!--
-         <div class="image-wrapper">
-           <img class="image img1" 
-                src="https://i.pinimg.com/736x/cf/52/b2/cf52b270b9d18e6ceadea0b4b09028ef.jpg" 
-                alt="Decorative image">
-           <img class="image img2" 
-                src="https://i.pinimg.com/736x/9e/c2/68/9ec268ee63e1af4da839b4ddebc62937.jpg" 
-                alt="Decorative image">
-         </div>
-         -->
       <div class="banner">
          <a href="#" ><img class="logo-text" src="assets/images/logo-text.png"></a>
          <h1 style="margin-top:-40px;font-family: 'Tagesschrift', system-ui;">Zettai Absolute</h1>
-         <p style="margin-top:-10px;"><label id="label_intro">A group of web-gen animators. We're a discord community of animators all striving to improve.</label></p>
+         <p style="margin-top:-10px;"><label id="label_intro"></label></p>
       </div>
       <center>
-         <h2><label id="label_checkAnim">Check out our animations!</label></h2>
+         <h2><label id="label_checkAnim"></label></h2>
       </center>
       <div class="box">
          <div class="carousel-container">
@@ -67,23 +57,21 @@
       </div>
       <br>
       <center>
-         <h2><label id="label_wishJoin">Wish to join our community?</label></h2>
+         <h2><label id="label_wishJoin"></label></h2>
       </center>
       <div class="box">
          <a target="_blank" href="https://docs.google.com/document/d/1cnCV6-B3ZWljLXzOpv2iylOki4Rqpe_Hrda3mM4sKro/edit?usp=sharing"><button class="red-button"><label id="label_readInfo">Read this info</label></button></a>
       </div>
       <br>
       <center>
-         <h2><label id="label_wantWork">Want to work with us?</label></h2>
+         <h2><label id="label_wantWork"></label></h2>
       </center>
       <div class="box">
 		  <label id="label_knownAs">
-         Our community is known as <b>Zettai Absolute</b><br>
-         While our studio goes by the name <b>Zettai Beyond</b>
          </label>
          
          <br><br>
-         <b><label id="label_sendEmail">Send us an email!</label></b><br>
+         <b><label id="label_sendEmail"></label></b><br>
          <a href="mailto:ZettaiAbsolute07@gmail.com"><button class="red-button">ZettaiAbsolute07@gmail.com</button></a>
       </div>
       <br>
