--- a/pages/ZettaiAbsolute/index.html
+++ b/pages/ZettaiAbsolute/index.html
@@ -60,6 +60,8 @@
          <h2><label id="label_wishJoin"></label></h2>
       </center>
       <div class="box">
+		  <label id="label_ifYouWant">
+         </label><br>
          <a target="_blank" href="https://docs.google.com/document/d/1cnCV6-B3ZWljLXzOpv2iylOki4Rqpe_Hrda3mM4sKro/edit?usp=sharing"><button class="red-button"><label id="label_readInfo">Read this info</label></button></a>
       </div>
       <br>
